--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="tasks-container">
             <h2>Active Missions</h2>
             <div class="tasks-list" id="tasksList">
-                <!-- Tasks will be dynamically added here -->
+                <!--- Tasks will be dynamically added here --->
             </div>
         </div>
     </div>
